2008-08-08  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c: Document the widget.
	* src/hildon-touch-selector-entry.c: Document the widget.

2008-08-08  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-docs.sgml
	* src/Makefile.am
	* src/hildon.h
	* src/hildon-check-button.h
	* src/hildon-check-button.c: New functions to create the Hildon
	Touch Checkbox.

	* src/hildon-gtk.h
	* src/hildon-gtk.c (hildon_gtk_check_button_new): Removed.

2008-08-08  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.h
	* src/hildon-button.c
	(hildon_button_add_title_size_group)
	(hildon_button_add_value_size_group)
	(hildon_button_add_image_size_group)
	(hildon_button_add_size_groups): New functions to set size groups
	for the button labels and image.
	(hildon_button_new_full): Removed

2008-08-08  Alejandro Pinheiro <apinheiro@igalia.com>

	* src/hildon-time-selector.c 
	(_check_ampm_format): use of g_warning instead of g_error with a gconf error
	in order to avoid a crash if gconf is not available
	
2008-08-08  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c (hildon_button_set_arrangement)
	(hildon_button_construct_child): Don't construct the button child
	before setting the arrangement.

2008-08-08  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-program-private.h
	* src/hildon-program.c
	* src/hildon-program.h
	(_hildon_program_remove_from_stack, _hildon_program_add_to_stack)
	(hildon_program_peek_window_stack)
	(hildon_program_pop_window_stack)
	(hildon_program_go_to_root_window): HildonProgram now has a
	separate list for stackable windows. Functions are provided to
	manage that list with a stack-like API.

	* src/hildon-stackable-window.c: Stackable window management is
	now much simpler with the new HildonProgram API. Windows no
	longer need to be manually added to the program, they're
	automatically pushed to the top of the stack when shown.

	* examples/hildon-stackable-window-example.c: Updated example to